test/sema/tuple-equality.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+2]]:12: error: no matching operator '==' with arguments '(int a)' and '(int a)'
	// CHECK-COUNT-8: note: candidate function:
    (a: 1) == (a: 1); // TODO: Implement tuple equality comparison
}
